# Projeto-MSI

./: CMakeLists.txt  Main.cpp  README.md
Assets/Models/: Cube.json  Cube.object
Engine/: CMakeLists.txt  Game.cpp  Game.h
Engine/Actors/: Actor.cpp  Actor.h
Engine/Components/: Component.cpp  Component.h
Engine/Components/Drawing/: ModelComponent.cpp  ModelComponent.h
Engine/Core/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h
Engine/Renderer/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/Utils/: JsonUtil.cpp  JsonUtil.h  ObjectHelper.cpp  ObjectHelper.h  ObjectLoader.cpp  ObjectLoader.h
Shaders/: Models.frag  Models.vert  Sprites.frag  Sprites.vert
Source/: Game.cpp  Game.h  GameMain.cpp  GameMain.h  Main.cpp
Source/Actors/: Cube.cpp  Cube.h
Source/Components/: Component.cpp  Component.h
Source/Renderer/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
Source/Utils/: Math.h
